# AnnOS

./: .gitignore  CMakeLists.txt
src/: Makefile.am
src/kernel/: kernel.c  syscall.c  task.c
src/kernel/boot/: boot.S  main.c
src/kernel/interrupt/: interrupt.c  interrupt_entry.S
src/kernel/loader/: loader.c  long_mode.S
src/kernel/misc/: util.h
